Use temporary domain

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://luunguyen.me/"
+baseURL = "https://luunguyen.netlify.com/"
 languageCode = "en-us"
 defaultContentLanguage = "en"
 title = "Luu Nguyen's Blog"
