--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,7 @@ baseURL = "https://luunguyen.netlify.com/"
 languageCode = "en-us"
 defaultContentLanguage = "en"
 enableEmoji = true
+enableRobotsTXT = true
 # Set the unicode character used for the "return" link in page footnotes.
 footnotereturnlinkcontents = "↩"
 title = "Luu Nguyen's Blog"
