--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://luunguyen.netlify.com/"
+baseURL = "https://luunguyen.me/"
 languageCode = "en-us"
 defaultContentLanguage = "en"
 enableEmoji = true
