Switch to new theme: cactus

--- a/config.toml
+++ b/config.toml
@@ -6,42 +6,70 @@ enableRobotsTXT = true
 # Set the unicode character used for the "return" link in page footnotes.
 footnotereturnlinkcontents = "↩"
 title = "Luu Nguyen's Blog"
-theme = "cupper-hugo-theme"
+theme = "hugo-theme-cactus"
 googleAnalytics = "UA-60116345-1"
+googleAnalyticsAsync = true
+copyright = "Luu Nguyen"
 disqusShortname = "nnluukhtn"
 
-[taxonomies]
-  tag = "tags"
+# summaryLength = 2
 
-[permalinks]
-  post = "/:filename/"
+# Main menu which appears below site header.
+[[menu.main]]
+name = "Home"
+url = "/"
+weight = 1
 
-[imaging]
-  quality = 99
+[[menu.main]]
+name = "Writings"
+url = "/posts"
+weight = 2
+
+[[menu.main]]
+name = "Tags"
+url = "/tags"
+weight = 3
+
+[[menu.main]]
+name = "About"
+url = "/about"
+weight = 4
+
+[markup]
+  [markup.tableOfContents]
+    endLevel = 4
+    ordered = false
+    startLevel = 2
+
 
 [params]
-  description = "A daddy, software engineer, currently Engineering Lead at [Hubble](https://hubble.sg/), focused on building and running Vietnam engineering team."
-  homeMetaContent = "a daddy, software engineer, currently Engineering Lead at [Hubble](https://hubble.sg/), focused on building and running Vietnam engineering team."
-  footer = "Made with [Hugo](https://gohugo.io/). Themed by [Cupper](https://github.com/zwbetz-gh/cupper-hugo-theme). Deployed to [Netlify](https://www.netlify.com/)."
-  # For more date formats see https://gohugo.io/functions/format/
-  dateFormat = "Jan 2, 2006"
-  codePenUser = "nnluukhtn"
+  colortheme = "white" # dark, light, white, or classic
+  description = "A daddy, software engineer, currently Engineering Lead at hubble.sg, focus on building and running Vietnam engineering team."
+  # https://gohugo.io/functions/format/#hugo-date-and-time-templating-reference
+  dateFormat = "January 2, 2006"
   images = ["about/about_me.jpg"]
+  mainSection = "posts"
+  showAllPostsOnHomePage = false
+  postsOnHomePage = 5
+  tagsOverview = true
+  rss = true
+  showProjectsList = false
+  css = ["css/custom.css"]
+  js = ["js/custom.js"]
+  logo = "images/logo.svg"
 
-[menu]
-  [[menu.nav]]
-    name = "Home"
-    url = "/"
-    weight = 1
-  [[menu.nav]]
-    name = "Tags"
-    url = "/tags/"
-    weight = 2
-  [[menu.nav]]
-    name = "About"
-    url = "/about/"
-    weight = 3
-  [[menu.nav]]
-    name = "RSS"
-    url = "/index.xml"
-    weight = 4
+  [params.comments]
+    enabled = true
+    engine = "disqus"
+
+[[params.social]]
+  name = "linkedin"
+  link = "https://www.linkedin.com/in/nnluukhtn/"
+
+[[params.social]]
+  name = "github"
+  link = "https://github.com/nnluukhtn"
+
+[[params.social]]
+  name = "email"
+  link = "nnluukhtn@gmail.com" # no need for "mailto:" at the start
